--- a/01-02.md
+++ b/01-02.md
@@ -15,7 +15,11 @@
 活动得到了来自学员、开发者和合作机构的广泛的支持，因此我们号召和组织了一批有着丰富开发经验的过(lao)来(si)人(ji)带领大家一起学(kai)习(che)，帮助大家更早完成课程并结业。
  
 快来听听他们的开篇寄语和鼓励吧：
- 
+
+> 未来是魔法师和麻瓜的世界，掌握数字世界运行规律的魔法师将拥有在数字时空(Cyber
+> Space)中呼风唤雨的能力。能力越大，责任越大，你会是那个守护数字时空的超级英雄么？
+
+—— Oasis，绿色守护作者
 
 > 各位 Study Jams 的学员们，欢迎你们进入 Android
 > 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jams
