--- a/01-02.md
+++ b/01-02.md
@@ -19,7 +19,7 @@
 > 未来是魔法师和麻瓜的世界，掌握数字世界运行规律的魔法师将拥有在数字时空(Cyber
 > Space)中呼风唤雨的能力。能力越大，责任越大，你会是那个守护数字时空的超级英雄么？
 
-—— Oasis，绿色守护作者
+— Oasis，绿色守护作者
 
 > 各位 Study Jams 的学员们，欢迎你们进入 Android
 > 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jams
@@ -27,7 +27,7 @@
 > 的乐趣！希望你们尽情的 Write the Code，Change the World！ 祝 Study Jams
 > 越办越好，吸引更多的人走进 Android 开发的世界，品尝编程的乐趣！
 
-——脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
+—— 脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
 
 > 作为当前最主流的移动编程技术，Android
 > 既轻松有趣又充满挑战，学习的过程既快乐又能让人不断进步：学习Android开发，将为你的成长带来一段奇妙之旅。
@@ -40,7 +40,7 @@
 >  3. 要时刻保持一颗好奇心，对于新知识，新技能要不断探索，积极主动去发现未知的技术世界，多和身边的开发者交流，敢于表达自己的想法；
 >  4. 学会利用谷歌搜索去查找解决问题的最佳方案，经常浏览谷歌开发者社区、GitHub 以及有经验开发者的博客，将有助于提高你的开发水平。 相信聪明的你掌握了以上的学习方法，定能够快速成为一名合格的 Android 开发工程师。
 
-——猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
+—— 猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
 
 
 > 课程很适合初学者，无论是课程的讲解还是联系的安排都生动有趣，清晰易懂。完成 Study Jams
@@ -49,11 +49,11 @@
 > 提供了很棒的平台，帮助了很多和我一样的初学者进入Android开发的大门。基本课程，进阶，进阶比赛一路走来已经不知不觉一年了，而现在Study
 > Jams项目已经开展到第二届，希望SJ的学习团队越来越壮大，越办越好！
 
-——藏，谷创字幕组成员
+—— 藏，谷创字幕组成员
  
 > 从最早接触Android，到后来使用各种各样新鲜的框架和工具，再到后来参与字幕翻译，一路上都是不停的摸索。回过头看，真的是满满的小满足和心辛酸。相信你也能在这条技术的不归路上走出自已独特的风格来。加油！fighting!
 
-——Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
+—— Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
 
 
 > Hello China Study Jam participants!
@@ -86,7 +86,7 @@
 > 
 > Sincerely, Katherine
 
-——Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师，
+—— Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师，
 
 请在这里提交或者在 Github 上直接发 pr，谢谢！https://gdgdocs.org/r/qmCYOt
 
