add bill, daimajia, etc.

--- a/01-02.md
+++ b/01-02.md
@@ -16,45 +16,15 @@
  
 快来听听他们的开篇寄语和鼓励吧：
 
-> 未来是魔法师和麻瓜的世界，掌握数字世界运行规律的魔法师将拥有在数字时空(Cyber
-> Space)中呼风唤雨的能力。能力越大，责任越大，你会是那个守护数字时空的超级英雄么？
-
-— Oasis，绿色守护作者
-
-> 各位 Study Jams 的学员们，欢迎你们进入 Android
-> 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jams
-> 的课程就迈出了一起改变世界的第一步！希望你们一直持续的去学习 Study Jams 的课程！希望你们尽情的品尝 Coding
-> 的乐趣！希望你们尽情的 Write the Code，Change the World！ 祝 Study Jams
-> 越办越好，吸引更多的人走进 Android 开发的世界，品尝编程的乐趣！
-
-—— 脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
-
-> 作为当前最主流的移动编程技术，Android
-> 既轻松有趣又充满挑战，学习的过程既快乐又能让人不断进步：学习Android开发，将为你的成长带来一段奇妙之旅。
+> 中国 Study Jam 的参与者们是全中国移动应用开发学习者中，利用谷歌先进技术把自己的创新带向国际市场的真正实践者和引领者。你们是全国开发者的榜样！你们是我们的骄傲！
 > 
-> 如果之前你对编程没有了解，那么不要怕，只要认真的学习 Study Jams
-> 课程，你将很快能够掌握它，从此写一个APP将不再是难事。这里，为了便于大家快速学习和提高，我给广大初学者们支几招：
+> 你们不仅仅是简单地学习移动应用开发，还将学会从设计到编程到应用发布这样一个完整的开发流程和生态系统，同时学习使用 Firebase
+> 等先进的集成性开发工具，让你未来的开发效率和用户服务能力极大地提升。这是目前全中国其它 Android
+> 技术学习班和课程所没有的东西，这些实战型的动手课程让你学到真本领，希望大家都可以加油学习！
 > 
->  1. 学会自学，多读书、读好书，选择适合自己的案例教材，将教材中的案例独立实现并总结编译过程中出现的各种问题，避免以后再次出现；
->  2. 遇到难以解决的问题，一定要先尝试自己解决，自己解决不了的时候在去请教他人，把每一个难题的解决都当做是对自己的一次锻炼；
->  3. 要时刻保持一颗好奇心，对于新知识，新技能要不断探索，积极主动去发现未知的技术世界，多和身边的开发者交流，敢于表达自己的想法；
->  4. 学会利用谷歌搜索去查找解决问题的最佳方案，经常浏览谷歌开发者社区、GitHub 以及有经验开发者的博客，将有助于提高你的开发水平。 相信聪明的你掌握了以上的学习方法，定能够快速成为一名合格的 Android 开发工程师。
+> 希望有更多的学员和更多的中国开发者关注谷歌开发技术和 Google Play 发布平台，把你的精彩创新向全世界展示！
 
-—— 猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
-
-
-> 课程很适合初学者，无论是课程的讲解还是联系的安排都生动有趣，清晰易懂。完成 Study Jams
-> 活动安排的课程学习之后你就可以独立制作一些很酷炫的应用了。但只是掌握这些显然还不足以应对复杂一些的应用。所以建议学员们在学习课程的同时，多搜索，多看文档。在完成课程之后不要将其抛在一边，因为任何事都是贵在坚持✊。所以我们一起加油！
-> Study Jams
-> 提供了很棒的平台，帮助了很多和我一样的初学者进入Android开发的大门。基本课程，进阶，进阶比赛一路走来已经不知不觉一年了，而现在Study
-> Jams项目已经开展到第二届，希望SJ的学习团队越来越壮大，越办越好！
-
-—— 藏，谷创字幕组成员
- 
-> 从最早接触Android，到后来使用各种各样新鲜的框架和工具，再到后来参与字幕翻译，一路上都是不停的摸索。回过头看，真的是满满的小满足和心辛酸。相信你也能在这条技术的不归路上走出自已独特的风格来。加油！fighting!
-
-—— Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
-
+—— Bill Luan，谷歌开发技术推广部大中华区主管
 
 > Hello China Study Jam participants!
 > 
@@ -86,7 +56,64 @@
 > 
 > Sincerely, Katherine
 
-—— Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师，
+—— Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师
+
+
+> 未来是魔法师和麻瓜的世界，掌握数字世界运行规律的魔法师将拥有在数字时空(Cyber Space)中呼风唤雨的能力。能力越大，责任越大，你会是那个守护数字时空的超级英雄么？
+
+— 冯森林，绿色守护作者
+
+> 各位 Study Jams 的学员们，欢迎你们进入 Android 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jams 的课程就迈出了一起改变世界的第一步！希望你们一直持续的去学习 Study Jams 的课程！希望你们尽情的品尝 Coding 的乐趣！希望你们尽情的 Write the Code，Change the World！ 
+> 
+> 祝 Study Jams 越办越好，吸引更多的人走进 Android 开发的世界，品尝编程的乐趣！
+
+—— 脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
+
+> 作为当前最主流的移动编程技术，Android
+> 既轻松有趣又充满挑战，学习的过程既快乐又能让人不断进步：学习Android开发，将为你的成长带来一段奇妙之旅。
+> 
+> 如果之前你对编程没有了解，那么不要怕，只要认真的学习 Study Jams
+> 课程，你将很快能够掌握它，从此写一个APP将不再是难事。这里，为了便于大家快速学习和提高，我给广大初学者们支几招：
+> 
+>  1. 学会自学，多读书、读好书，选择适合自己的案例教材，将教材中的案例独立实现并总结编译过程中出现的各种问题，避免以后再次出现；
+>  2. 遇到难以解决的问题，一定要先尝试自己解决，自己解决不了的时候在去请教他人，把每一个难题的解决都当做是对自己的一次锻炼；
+>  3. 要时刻保持一颗好奇心，对于新知识，新技能要不断探索，积极主动去发现未知的技术世界，多和身边的开发者交流，敢于表达自己的想法；
+>  4. 学会利用谷歌搜索去查找解决问题的最佳方案，经常浏览谷歌开发者社区、GitHub 以及有经验开发者的博客，将有助于提高你的开发水平。 相信聪明的你掌握了以上的学习方法，定能够快速成为一名合格的 Android 开发工程师。
+
+—— 猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
+
+
+> 课程很适合初学者，无论是课程的讲解还是联系的安排都生动有趣，清晰易懂。完成 Study Jams 活动安排的课程学习之后你就可以独立制作一些很酷炫的应用了。但只是掌握这些显然还不足以应对复杂一些的应用。所以建议学员们在学习课程的同时，多搜索，多看文档。在完成课程之后不要将其抛在一边，因为任何事都是贵在坚持✊。所以我们一起加油！
+> 
+> Study Jams 提供了很棒的平台，帮助了很多和我一样的初学者进入 Android 开发的大门。基本课程，进阶，进阶比赛一路走来已经不知不觉一年了，而现在Study Jams 项目已经开展到第二届，希望 SJ 的学习团队越来越壮大，越办越好！
+
+—— 藏，谷创字幕组成员
+ 
+> 从最早接触 Android，到后来使用各种各样新鲜的框架和工具，再到后来参与字幕翻译，一路上都是不停的摸索。回过头看，真的是满满的小满足和心辛酸。相信你也能在这条技术的不归路上走出自已独特的风格来。加油！fighting!
+
+—— Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
+
+> 五年 Android 开发经验，一路自学走过，从最开始国内 Android 学习自学很匮乏，到现在高质量内容倍出，期间遇坑无数，填坑无数……
+> 
+> 看到 Study Jams 项目，内心最大的感受就是如果我那会儿有这个项目该多好呀！
+> 
+> 参加项目的同学，你们很幸运，赶上了这么好的时代！衷心希望大家好好学习，都能通过 Study Jams 项目入门 Android 开发，并能在这条路上越走越远！
+
+—— Jonas Liang，谷创字幕组译者，喜欢技术，从事 Android 开发 5 年
+
+> 学习是件很辛苦的事情，但越是辛苦越是有价值。
+> 
+> 编程的乐趣是掌控和突破。实现自己脑子中的想法，击溃别人的程序，做的更好，或者彻底逆向。但一切都有个过程，一步步来，不论今天多么痛苦和徘徊，努力再往前走一步。不要给自己定目标说要几个月学会，定一个几个月内爱上 Android 编程这个目标，倒是更为实际。加油。
+> 
+> 活动最大的意义是相互监督和及时反馈，只要做到这两点，再加上你的坚持，不论是什么课程或者你参与了什么活动，我相信你的收获都是巨大的。
+
+—— 代码家，干货集中营创始人
+
+> 参与 Study Jams 活动真的是 Android 入门不错的选择呢（看了看我没有坚持学完的 StudyJams 帐户……（捂脸
+> 
+> 在 Android 开发这片竞争激烈的红海中，我只希望各位能够脱颖而出成为最后的胜利者！
+
+—— Rachel Tang，谷创字幕组译者，一只咸鱼
 
 请在这里提交或者在 Github 上直接发 pr，谢谢！https://gdgdocs.org/r/qmCYOt
 
