--- a/01-02.md
+++ b/01-02.md
@@ -10,7 +10,7 @@
 
 内容：
  
-由 Google 发起的 Study Jams - Android 入门班正在如火如荼的进行中，这个活动旨在帮助零基础的学员入门 Android 开发，亮点是课程由全部 Google 的高级工程师录制，同时坚持组建小组学习，相互帮助和监督，也“强迫”每一位学员分享自己的学习心得。
+由 Google 发起的 Study Jam - Android 入门班正在如火如荼的进行中，这个活动旨在帮助零基础的学员入门 Android 开发，亮点是课程由全部 Google 的高级工程师录制，同时坚持组建小组学习，相互帮助和监督，也“强迫”每一位学员分享自己的学习心得。
  
 活动得到了来自学员、开发者和合作机构的广泛的支持，因此我们号召和组织了一批有着丰富开发经验的过(lao)来(si)人(ji)带领大家一起学(kai)习(che)，帮助大家更早完成课程并结业。
  
@@ -24,7 +24,7 @@
 > 
 > 希望有更多的学员和更多的中国开发者关注谷歌开发技术和 Google Play 发布平台，把你的精彩创新向全世界展示！
 
-—— Bill Luan，谷歌开发技术推广部大中华区主管
+— Bill Luan，谷歌开发技术推广部大中华区主管
 
 > Hello China Study Jam participants!
 > 
@@ -56,23 +56,23 @@
 > 
 > Sincerely, Katherine
 
-—— Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师
+— Katherine Kuan 课程讲师，（前）Google 开发技术推广工程师
 
 
 > 未来是魔法师和麻瓜的世界，掌握数字世界运行规律的魔法师将拥有在数字时空(Cyber Space)中呼风唤雨的能力。能力越大，责任越大，你会是那个守护数字时空的超级英雄么？
 
 — 冯森林，绿色守护作者
 
-> 各位 Study Jams 的学员们，欢迎你们进入 Android 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jams 的课程就迈出了一起改变世界的第一步！希望你们一直持续的去学习 Study Jams 的课程！希望你们尽情的品尝 Coding 的乐趣！希望你们尽情的 Write the Code，Change the World！ 
+> 各位 Study Jam 的学员们，欢迎你们进入 Android 开发的世界，话说开始一件事很容易，持续的做一件事确不容易。再小的梦想，也要在全世界绽放，所以学习 Study Jam 的课程就迈出了一起改变世界的第一步！希望你们一直持续的去学习 Study Jam 的课程！希望你们尽情的品尝 Coding 的乐趣！希望你们尽情的 Write the Code，Change the World！ 
 > 
-> 祝 Study Jams 越办越好，吸引更多的人走进 Android 开发的世界，品尝编程的乐趣！
+> 祝 Study Jam 越办越好，吸引更多的人走进 Android 开发的世界，品尝编程的乐趣！
 
-—— 脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
+— 脉脉不得语，郑州 GDG 组织者、AndroidDevTools 站长、Android开发技术周报创办人
 
 > 作为当前最主流的移动编程技术，Android
 > 既轻松有趣又充满挑战，学习的过程既快乐又能让人不断进步：学习Android开发，将为你的成长带来一段奇妙之旅。
 > 
-> 如果之前你对编程没有了解，那么不要怕，只要认真的学习 Study Jams
+> 如果之前你对编程没有了解，那么不要怕，只要认真的学习 Study Jam
 > 课程，你将很快能够掌握它，从此写一个APP将不再是难事。这里，为了便于大家快速学习和提高，我给广大初学者们支几招：
 > 
 >  1. 学会自学，多读书、读好书，选择适合自己的案例教材，将教材中的案例独立实现并总结编译过程中出现的各种问题，避免以后再次出现；
@@ -80,26 +80,26 @@
 >  3. 要时刻保持一颗好奇心，对于新知识，新技能要不断探索，积极主动去发现未知的技术世界，多和身边的开发者交流，敢于表达自己的想法；
 >  4. 学会利用谷歌搜索去查找解决问题的最佳方案，经常浏览谷歌开发者社区、GitHub 以及有经验开发者的博客，将有助于提高你的开发水平。 相信聪明的你掌握了以上的学习方法，定能够快速成为一名合格的 Android 开发工程师。
 
-—— 猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
+— 猴子搬来的救兵，Android架构师，中国程序员社群知名KOL
 
 
-> 课程很适合初学者，无论是课程的讲解还是联系的安排都生动有趣，清晰易懂。完成 Study Jams 活动安排的课程学习之后你就可以独立制作一些很酷炫的应用了。但只是掌握这些显然还不足以应对复杂一些的应用。所以建议学员们在学习课程的同时，多搜索，多看文档。在完成课程之后不要将其抛在一边，因为任何事都是贵在坚持✊。所以我们一起加油！
+> 课程很适合初学者，无论是课程的讲解还是联系的安排都生动有趣，清晰易懂。完成 Study Jam 活动安排的课程学习之后你就可以独立制作一些很酷炫的应用了。但只是掌握这些显然还不足以应对复杂一些的应用。所以建议学员们在学习课程的同时，多搜索，多看文档。在完成课程之后不要将其抛在一边，因为任何事都是贵在坚持✊。所以我们一起加油！
 > 
-> Study Jams 提供了很棒的平台，帮助了很多和我一样的初学者进入 Android 开发的大门。基本课程，进阶，进阶比赛一路走来已经不知不觉一年了，而现在Study Jams 项目已经开展到第二届，希望 SJ 的学习团队越来越壮大，越办越好！
+> Study Jam 提供了很棒的平台，帮助了很多和我一样的初学者进入 Android 开发的大门。基本课程，进阶，进阶比赛一路走来已经不知不觉一年了，而现在 Study Jam 项目已经开展到第二届，希望 SJ 的学习团队越来越壮大，越办越好！
 
-—— 藏，谷创字幕组成员
+— 藏，谷创字幕组成员
  
 > 从最早接触 Android，到后来使用各种各样新鲜的框架和工具，再到后来参与字幕翻译，一路上都是不停的摸索。回过头看，真的是满满的小满足和心辛酸。相信你也能在这条技术的不归路上走出自已独特的风格来。加油！fighting!
 
-—— Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
+— Yuan，谷创字幕组成员核心译者，Android开发者，Google 铁粉
 
 > 五年 Android 开发经验，一路自学走过，从最开始国内 Android 学习自学很匮乏，到现在高质量内容倍出，期间遇坑无数，填坑无数……
 > 
-> 看到 Study Jams 项目，内心最大的感受就是如果我那会儿有这个项目该多好呀！
+> 看到 Study Jam 项目，内心最大的感受就是如果我那会儿有这个项目该多好呀！
 > 
-> 参加项目的同学，你们很幸运，赶上了这么好的时代！衷心希望大家好好学习，都能通过 Study Jams 项目入门 Android 开发，并能在这条路上越走越远！
+> 参加项目的同学，你们很幸运，赶上了这么好的时代！衷心希望大家好好学习，都能通过 Study Jam 项目入门 Android 开发，并能在这条路上越走越远！
 
-—— Jonas Liang，谷创字幕组译者，喜欢技术，从事 Android 开发 5 年
+— Jonas Liang，谷创字幕组译者，喜欢技术，从事 Android 开发 5 年
 
 > 学习是件很辛苦的事情，但越是辛苦越是有价值。
 > 
@@ -107,16 +107,22 @@
 > 
 > 活动最大的意义是相互监督和及时反馈，只要做到这两点，再加上你的坚持，不论是什么课程或者你参与了什么活动，我相信你的收获都是巨大的。
 
-—— 代码家，干货集中营创始人
+— 代码家，干货集中营创始人
 
-> 参与 Study Jams 活动真的是 Android 入门不错的选择呢（看了看我没有坚持学完的 StudyJams 帐户……（捂脸
+> 参与 Study Jam 活动真的是 Android 入门不错的选择呢（看了看我没有坚持学完的 Study Jam 帐户……（捂脸
 > 
 > 在 Android 开发这片竞争激烈的红海中，我只希望各位能够脱颖而出成为最后的胜利者！
 
-—— Rachel Tang，谷创字幕组译者，一只咸鱼
+— Rachel Tang，谷创字幕组译者，一只咸鱼
+
+> Study Jam 的 Android Development for Beginners 课程浅显易懂，内容生动，教学和练习平衡，的确适合初学者，是非常好的入门方法。在我个人的学习过程中，体会更深的反倒不是 Android 的编程知识，而是学习的一些小技巧，例如善用 Google 搜索从 StackOverflow 等网站找到一些问题的答案，还有如何充分利用 Android 的官方文档来帮忙开发。
+>
+> 希望各位学员能坚持到底，无论是有志投身 Android 开发，还是仅仅体验一把开发者的瘾，完成 Study Jam 都是很有意思的一件事。大家加油！
+
+— HsuJin，2016 Study Jam 结业学员，谷创字幕组译者，受邀参加 2017 Google I/O 大会
 
 请在这里提交或者在 Github 上直接发 pr，谢谢！https://gdgdocs.org/r/qmCYOt
 
-他们明明已经可以靠颜值吃饭了，偏偏来参与 Study Jams 作为志愿者，带领大家一起学习，作为学员的你，也赶快行动起来吧！
+他们明明已经可以靠颜值吃饭了，偏偏来参与 Study Jam 作为志愿者，带领大家一起学习，作为学员的你，也赶快行动起来吧！
 
 谢谢！
