--- a/01-02.md
+++ b/01-02.md
@@ -105,7 +105,7 @@
 > 
 > 活动最大的意义是相互监督和及时反馈，只要做到这两点，再加上你的坚持，不论是什么课程或者你参与了什么活动，我相信你的收获都是巨大的。
 
-— 代码家，干货集中营创始人
+— 代码家，干货集中营发起人
 
 > 参与 Study Jams 活动真的是 Android 入门不错的选择呢（看了看我没有坚持学完的 Study Jams 帐户……（捂脸
 > 
