--- a/01-02.md
+++ b/01-02.md
@@ -119,6 +119,12 @@
 
 — HsuJin，2016 Study Jams 结业学员，谷创字幕组译者，受邀参加 2017 Google I/O 大会
 
+— 徐宜生，《Android群英传》作者
+
+> Android学习是一段充满乐趣和挑战的旅途，然而在这段旅途中，你不会是孤独一人，你会结实很多很多志同道合的朋友，一起学习、一起交流，很快你就会发现，Study Jams，其乐无穷~
+
+> 在 Android 开发这片竞争激烈的红海中，我只希望各位能够脱颖而出成为最后的胜利者！
+
 请在这里提交或者在 Github 上直接发 pr，谢谢！https://gdgdocs.org/r/qmCYOt
 
 他们明明已经可以靠颜值吃饭了，偏偏来参与 Study Jams 作为志愿者，带领大家一起学习，作为学员的你，也赶快行动起来吧！
